--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "script.js",
   "scripts": {
     "dev": "browser-sync start --server --files main.js **/*.js styles.css index.html",
-    "lint": "eslint ./**/*.js",
+    "lint": "eslint ./**/*.js --fix",
     "prettier": "prettier --write ."
   },
   "keywords": [],
